--- a/digital-credentials/get-user-activation.https.html
+++ b/digital-credentials/get-user-activation.https.html
@@ -8,26 +8,30 @@
 <script>
   promise_test(async (t) => {
     assert_false(
-        navigator.userActivation.isActive,
-        "User activation should not be active"
+      navigator.userActivation.isActive,
+      "User activation should not be active"
     );
-    await promise_rejects_dom(t, "NotAllowedError", navigator.identity.get({}));
+    await promise_rejects_dom(
+      t,
+      "NotAllowedError",
+      navigator.identity.get({ digitial: [] })
+    );
   }, "navigator.identity.get() calling the API without user activation should reject with NotAllowedError.");
 
   promise_test(async (t) => {
     await test_driver.bless();
     assert_true(
-        navigator.userActivation.isActive,
-        "User activation should be active after test_driver.bless()."
+      navigator.userActivation.isActive,
+      "User activation should be active after test_driver.bless()."
     );
     await promise_rejects_dom(
-        t,
-        "NotSupportedError",
-        navigator.identity.get({})
+      t,
+      "NotSupportedError",
+      navigator.identity.get({ digitial: [] })
     );
     assert_false(
-        navigator.userActivation.isActive,
-        "User activation should be consumed after navigator.identity.get()."
+      navigator.userActivation.isActive,
+      "User activation should be consumed after navigator.identity.get()."
     );
   }, "navigator.identity.get() consumes user activation.");
 </script>
